
ALPHA v0.0.0.3
    - Fixed some issues with cookie management
    - Work has begun on home.html

ALPHA v0.0.0.4
    - Created neat red, green, and blue buttons for the site
    - Renamed project to Project Mercury

ALPHA v0.0.0.5
    - Added optional severity levels to <class Log> output
    - Created <class Account> in user.py
    - Added account loading and saving in main.py
    - Created transactions.log for logging payments

ALPHA v0.0.0.6
    - Renamed user.py to account.py to avoid confusion
    - Button CSS moved to buttons.css
    - Actual work to home.html (central text div, background)

ALPHA v0.0.0.7
    - Added cookie support to main.py
    - Added attach_file() to <class Response> if you don't want to send_file()
    - Added response code 307 to alleviate annoyances with code 301
    - Server.send() now automatically wraps strings in Responses
    - Response codes now wrap themselves in Responses, so you can still attach cookies and stuff with every code

ALPHA v0.0.0.8
    - Accounts now have usernames and passwords
    - Modularized the server code, put .dat files in folder, reorganized all that modularized server code
    - Changed home.html background to an <img> rather than a property of <body>
    - Created a console page for remote server interaction (still needs to be scripted)

ALPHA v0.0.0.9
    - Added audio folder
    - send_file() now uses <class Response>'s attach_file()
    - Added several /actions to main.py (pay, signup, shutdown)
    - Fixed severe bugs in server exit process
    - Created a to-do list
    - Confirmed pickling of users works as intended


ALPHA v0.0.0.10
    - Changed static code methods to a single lookup in codes.cfg, with kwargs for necessary parameters
    - Refined file location predictor, moved directory and file type specifications to ext.cfg
    - Switched to localhost:8080
    - Split CSS and JS into separate folders

ALPHA v0.0.0.11
    -